--- a/src/vigilo/themes/templates/vigiboard/plugins/priority.html
+++ b/src/vigilo/themes/templates/vigiboard/plugins/priority.html
@@ -2,15 +2,19 @@
       xmlns:xi="http://www.w3.org/2001/XInclude"
       py:strip="">
 
-<py:def function="plugin_template(name, instance)">
-</py:def>
+<th id="plugin_${name}" class="plugin_${name}" py:def="priority_header(name, instance)" title="ITIL Priority">Priority</th>
 
-<th id="plugin_${name}" class="plugin_${name}" py:def="header_template(name, instance)" title="ITIL Priority">Priority</th>
-
-<py:def function="data_template(name, instance, data, plugin_data)">
+<py:def function="priority_data(name, instance, data, plugin_data)">
     <py:with vars="state = StateName.value_to_statename(data[0].cause.current_state)">
         <td class="plugin_${name} ${state}">${data[0].priority}</td>
     </py:with>
+</py:def>
+
+<py:def function="plugin_template(name, instance)">
+    <?python
+        plugin_header_functions[name] = priority_header
+        plugin_data_functions[name] = priority_data
+    ?>
 </py:def>
 
 </html>
