Préparation ajout token au profile utilisateur.
Mise à jour des thèmes pour permettre l'ajout (plus tard) de la gestion du token
secret de l'utilisateur via la page "Profil" de VigiAdmin.

Renommage de /profile/update en /profile/change_pwd pour permettre l'extension
du contrôleur de profile pour la gestion du token secret.

Ajout de tests unitaires sur le contrôleur de rum et sur le contrôleur de profil.


git-svn-id: https://vigilo-dev.si.c-s.fr/svn@6696 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigiadmin/profile.html
+++ b/src/vigilo/themes/templates/vigiadmin/profile.html
@@ -13,9 +13,9 @@
 </head>
 
 <body>
-<py:if test="not use_kerberos">
+<py:if test="not external_auth">
 <div id="loginform">
-<form action="${tg.url('/profile/update')}" method="post" class="loginfields">
+<form action="${tg.url('/profile/change_pwd')}" method="post" class="loginfields">
     <h2><span>Change password</span></h2>
 
     <label for="old_password">Old password:</label>
