--- a/src/vigilo/themes/templates/vigiboard/vigiboard.html
+++ b/src/vigilo/themes/templates/vigiboard/vigiboard.html
@@ -55,6 +55,7 @@
     <script type="text/javascript" src="${tg.url('/js/lib/Observer.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/autocompleter-vigilo.js')}"></script>
 
+    <script type="text/javascript" src="${tg.url('/js/grouptree.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/tree.js')}"></script>
 </head>
 </py:match>
