Propagation recherche sur priorité dans VigiBoard (#623).
Les changements apportés pour faire fonctionner les changements de page
avec la recherche sur la priorité avaient été perdus dans la r6679.
Cette révision les réintroduit, ce qui permet de corriger le ticket #623.


git-svn-id: https://vigilo-dev.si.c-s.fr/svn@6848 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigiboard/events_table.html
+++ b/src/vigilo/themes/templates/vigiboard/events_table.html
@@ -59,10 +59,8 @@
                                 <img src="${tg.url('/images/top_left_arrow.png')}" alt="Previous" title="Previous page"/>
                              </a>
 
-                            <!--! "dummy" est nécessaire pour que Genshi mette à jour le dictionnaire. -->
                             <a py:otherwise=""
-                                py:with="copy = search.copy(); dummy = copy.update(page=page.previous_page)"
-                                href="${tg.url('/', copy)}">
+                                href="${tg.url('/', params=fixed_search, page=page.previous_page)}">
                                 <img src="${tg.url('/images/top_left_arrow.png')}" alt="Previous" title="Previous page"/>
                              </a>
                         </py:choose>
@@ -81,8 +79,7 @@
                              </a>
 
                              <a py:otherwise=""
-                                py:with="copy = search.copy(); dummy = copy.update(page=page.next_page)"
-                                href="${tg.url('/', copy)}">
+                                href="${tg.url('/', params=fixed_search, page=page.next_page)}">
                                 <img src="${tg.url('/images/top_right_arrow.png')}" alt="Next" title="Next page"/>
                              </a>
                         </py:choose>
@@ -129,8 +126,7 @@
                              </a>
 
                             <a py:otherwise=""
-                                py:with="copy = search.copy(); dummy = copy.update(page=page.previous_page)"
-                                href="${tg.url('/', copy)}">
+                                href="${tg.url('/', params=fixed_search, page=page.previous_page)}">
                                 <img src="${tg.url('/images/bottom_left_arrow.png')}" alt="Previous" title="Previous page"/>
                             </a>
                         </py:choose>
@@ -149,8 +145,7 @@
                              </a>
 
                             <a py:otherwise=""
-                                py:with="copy = search.copy(); dummy = copy.update(page=page.next_page)"
-                                href="${tg.url('/', copy)}">
+                                href="${tg.url('/', params=fixed_search, page=page.next_page)}">
                                 <img src="${tg.url('/images/bottom_right_arrow.png')}" alt="Next" title="Next page"/>
                              </a>
                         </py:choose>
@@ -166,7 +161,7 @@
                             <br/>
                             ${page.pager(
                                 format='$link_first $link_previous ~3~ $link_next $link_last',
-                                page_param='page', show_if_single_page=True, **search
+                                page_param='page', show_if_single_page=True, **fixed_search
                             )}
                         </span>
                     </div>
