--- a/src/vigilo/themes/templates/vigiboard/vigiboard.html
+++ b/src/vigilo/themes/templates/vigiboard/vigiboard.html
@@ -53,7 +53,7 @@
     <script type="text/javascript" src="${tg.url('/js/lib/Autocompleter.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/lib/Autocompleter.Request.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/lib/Observer.js')}"></script>
-    <script type="text/javascript" src="${tg.url('/js/autocompleter-vigilo.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/Autocompleter.Request.VigiloJSON.js')}"></script>
 
     <script type="text/javascript" src="${tg.url('/js/grouptree.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/tree.js')}"></script>
