Correction d'un bug dans l'affichage des icônes du header, qui générait un espace entre ce même header et la barre de menu.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@6934 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigimap/css/map.css
+++ b/src/vigilo/themes/public/vigimap/css/map.css
@@ -10,8 +10,16 @@
     text-decoration: none;
 }
 
-.header_item {
+#header a img {
+    display: block;
+}
+
+.header_icons {
     float: right;
+}
+
+.header_icon {
+    float: left;
 }
 
 #logo {
