--- a/src/vigilo/themes/templates/vigimap/main.html
+++ b/src/vigilo/themes/templates/vigimap/main.html
@@ -61,24 +61,24 @@
             </a>
         </span>
 
-        <div class="header_item">
-            <a id="search" href="?">
-                <img src="${tg.url('/images/search.png')}"
-                    alt="Search" title="Search for a specific host/graph" />
-            </a>
-
-            <py:if test="tg.config.get('help_link')">
-            <a href="${tg.config['help_link']}">
-                <img src="${tg.url('/images/help.png')}" alt="Help" title="Help"/>
-            </a>
-            </py:if>
-
+        <div class="header_icons">
+            <div class="header_icon">
+                <a id="search" href="?">
+                    <img src="${tg.url('/images/search.png')}"
+                        alt="Search" title="Search for a specific host/graph" />
+                </a>
+            </div>
+            <div py:if="tg.config.get('help_link')" class="header_icon">
+                <a href="${tg.config['help_link']}">
+                    <img src="${tg.url('/images/help.png')}" alt="Help" title="Help"/>
+                </a>
+            </div>
             <!--! On masque le bouton de login/logout si une authentification externe est utilisée. -->
-            <span py:if="tg.auth_stack_enabled and not asbool(tg.config.get('external_auth'))" py:strip="True">
-            <a href="${tg.url('/logout_handler')}">
-                <img src="${tg.url('/images/logout.png')}" alt="Log out" title="Log out"/>
-            </a>
-            </span>
+            <div py:if="tg.auth_stack_enabled and not asbool(tg.config.get('external_auth'))" class="header_icon">
+                <a href="${tg.url('/logout_handler')}">
+                    <img src="${tg.url('/images/logout.png')}" alt="Log out" title="Log out"/>
+                </a>
+            </div>
         </div>
 
         <h1><a href="${tg.url('/')}">VigiMap<span id="maptitle"></span></a></h1>
