themes: jolification des boîtes de débit dans VigiMap
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@6957 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigimap/css/map.css
+++ b/src/vigilo/themes/public/vigimap/css/map.css
@@ -208,8 +208,10 @@ h1 a:hover {
 .link-usage {
     position: absolute;
     border: 1px solid gray;
-    background-color: white;
-    font-size: 65%;
+    /* http://css-tricks.com/ie-background-rgb-bug/ */
+    background: white;
+    background: rgba(255,255,255,0.6);
+    font-size: 70%;
     padding: 0px 0.2em;
     display: none;
 }
