Amélioration du formulaire de création/édition de liens (#615) : - Ajout d'une légende pour préciser que les champs en rouge sont obligatoires ; - Ajout de précisions pour le champ 'graphe' des liens de type 'service'.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@6981 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigimap/css/ServiceElement.css
+++ b/src/vigilo/themes/public/vigimap/css/ServiceElement.css
@@ -44,7 +44,7 @@
  *  Formulaire d'édition des propriétés des liens
 */
 
-#link_form fieldset {
+#link_form {
     font-family: sans-serif;
 }
 
@@ -122,8 +122,17 @@
     margin-left: 160px;
 }
 
+#link_form div.formlegend {
+    margin-left: 20px;
+    margin-top: 10px;
+    color: grey;
+    font-style: italic;
+    font-size: 90%;
+}
+
 #link_form input#link_form_submit {
-    margin-left: 240px;
-    margin-bottom: 10px;
+    float: right;
+    margin: 0px 40px 10px;
+    padding: 2px 5px;
 }
 
